Wed Feb 24 15:23:28 1999  George Lebl  <jirka@5z.com>

	* gnome-icon-entry.c: get rid of last remaints of gtk pixmap code

1999-02-23  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* gnome-scores.c (gnome_scores_set_logo_pixmap): Kill gtk-pixmap
	and use gnome-pixmap here as well.

	* gnome-icon-entry.c (entry_changed): Use gnome-pixmap instead of
	gtk-pixmap here
	(setup_preview): Kill gtk-pixmap here too.

	* gnome-messagebox.c (gnome_message_box_new): Justify labels to
	the left.

	* gnome-init.c (gnome_add_gtk_arg_callback): Add a hack to allow
	using --gtk-debug-objects (this is required as we create GTK
	objects before gtk_init is called).
	(gnome_init_with_popt_table): Do this before parsing argument.s

Tue Feb 23 00:31:53 1999  George Lebl  <jirka@5z.com>

	* gnome-pixmap.c: fix for the new requisition stuff so that
	  set_usize works properly, use gdk_imlib_move_{image,mask} instead
	  of the copy variety to save some time, and add some documentation
	  to the functions that were missing it.

	* gnome-pixmap-entry.[ch]: actually guarantee that disk isn't touched
	  more then once a second when typing, fix a memory leak and cache
	  the last image that was previewed, so that we don't load the same
	  image over and over

Sun Feb 21 19:06:51 1999  Maciej Stachowiak  <mstachow@alum.mit.edu>

	* gnome-winhints.c (gnome_win_hints_get_workspace): This code was
 	on crack, it was getting the _WIN_HINTS property instead of
 	_WIN_WORKSPACE.

1999-02-21  Nuno Ferreira  <nmrf@rnl.ist.utl.pt>

	* Makefile.am (gnome_segv_LDADD): Use libgnomeui.la without the
	path from the topdir so that AM_MAKEFLAGS=-j4 works. 
	(ted_demo_LDADD, stock_demo_LDADD, winhints_demo_LDADD,
	animator_demo_LDADD, dock_demo_LDADD): Likewise.
	
Sun Feb 21 04:36:54 1999  George Lebl  <jirka@5z.com>

	* gnome-winhints.c: don't use CARD32's for format 32 hints, Xlib sends
	  them as longs and those can be 64bit on alpha

1999-02-20  Stuart Parmenter <pavlov@pavlov.net>
